# bp_photo_capture

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
backend/: .env.example  config.py  main.py  pyproject.toml
backend/services/: llm_service.py
backend/tests/: conftest.py  test_analyze.py  test_openai_provider.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CameraView.jsx  ResultPanel.jsx
frontend/src/utils/: monitorSpoofDetector.js
